# mysteriousbot

./: .gitignore  Cargo.toml  Dockerfile  LICENSE.md  README.md  deploy.sh
config/: cmdr.toml  mysteriousbot.toml  mysteriousbot.yml
src/: ack_message_handler.rs  autoresponder.rs  cmdr_message_handler.rs  command.rs  config.rs  config_parser.rs  configparser.rs  counter.rs  emojicache.rs  handler.rs  main.rs  mysterious_message_handler.rs  role_wizard.rs  verbal_morality_handler.rs  word_watcher.rs
