[package]
name = "mysteriousbot"
version = "0.1.0"
authors = ["Christopher R. Miller <xpm@mysteriouspants.com>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
caches = "0.2.0"
dotenv = "0.15"
env_logger = "0.9"
futures = "0.3"
log = "0.4"
regex = "1.4"
serde = { version = "1.0", features = [ "derive" ] }
serenity = { version = "0.10.9", default-features = false, features = [ "builder", "cache", "client", "gateway", "http", "model", "utils", "rustls_backend", "unstable_discord_api" ] }
thiserror = "1.0"
tokio = { version = "1.2", features = [ "macros", "rt", "rt-multi-thread" ] }
toml = "0.5"
parking_lot = "0.11.1"
