[package]
name = "mysteriousbot"
version = "0.1.0"
authors = ["Christopher R. Miller <xpm@mysteriouspants.com>"]
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
dotenv = "0.15"
env_logger = "0.9"
futures = "0.3"
log = "0.4"
mysterious_cache = { git = "https://github.com/mysteriouspants/mysterious_cache" }
regex = "1.5"
serde = { version = "1.0", features = [ "derive" ] }
serenity = { version = "0.10", default-features = false, features = [ "builder", "cache", "client", "gateway", "http", "model", "utils", "rustls_backend", "unstable_discord_api" ] }
snafu = "0.7.0"
tokio = { version = "1.17", features = [ "macros", "rt", "rt-multi-thread" ] }
toml = "0.5"
