[package]
name = "mysteriousbot"
version = "0.1.0"
authors = ["Christopher R. Miller <xpm@mysteriouspants.com>"]
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0"
dotenv = "0"
env_logger = "0"
futures = "0"
log = "0"
mysterious_cache = { git = "https://github.com/mysteriouspants/mysterious_cache" }
r2d2 = "0"
r2d2_sqlite = "0"
rand = "0"
regex = "1"
rusqlite = { version = "0", features = [ "chrono" ] }
serde = { version = "1", features = [ "derive" ] }
serde_regex = "1"
serde_with = "1"
serde_yaml = "0"
serenity = { version = "0", default-features = false, features = [ "builder", "cache", "client", "gateway", "http", "model", "utils", "rustls_backend", "unstable_discord_api" ] }
snafu = "0"
tokio = { version = "1", features = [ "macros", "rt", "rt-multi-thread", "sync" ] }
toml = "0"
